@@ -2,6 +2,9 @@ Revision history for Dist-Zilla-Plugin-GitHub
 
 {{$NEXT}}
 
+  - fix undef warnings in [GitHub::Update] when any current settings un GitHub
+    are unset.
+
 0.43      2016-12-25 01:42:31Z
 
   - avoid undef warnings when the login name cannot be determined from git
